# hr_hf_helper

./: asyncio_error_fix.md  frontend_update_summary.md  http_500_fix.md  infinite_reload_fix.md  openapi-spec (1).json  telegram_backend.md  telegram_final_fixes.md  telegram_frontend.md  telegram_integration_guide.md  template_inheritance_fix.md
backend/: .env copy  API_SPECIFICATION_CONSOLIDATION_REPORT.md  ARCH_UPD.md  AUTO_TELEGRAM_SETUP.md  CURRENCY_UPDATE_AUTOMATION.md  DOCUMENTATION_COMPLETE_REPORT.md  Dockerfile.production  ERROR_IMAGE_SOLUTIONS.md  EUR_CURRENCY_INTEGRATION.md  EXPORT_DETAILED_REPORT.md  EXPORT_REPORT.md  HR_HELPER_COMPLETE_API_SPECIFICATION.json  HUNTFLOW_TOKEN_MIGRATION_GUIDE.md  IDEAS_FOR_FUTURE.md  PERMISSIONS_GUIDE.md  PERMISSIONS_IMPLEMENTATION_SUMMARY.md  README.md  TELEGRAM_2FA_GUIDE.md  TELEGRAM_2FA_TEST.md  TELEGRAM_API_SETUP.md  TELEGRAM_AUTH_DETECTION_FIXED.md  TELEGRAM_COMPLETELY_FIXED.md  TELEGRAM_COMPLETELY_WORKING.md  TELEGRAM_DEMO_GUIDE.md  TELEGRAM_EVENT_LOOP_FIXED.md  TELEGRAM_FINAL_FIXED.md  TELEGRAM_FINAL_GUIDE.md  TELEGRAM_FINAL_INSTRUCTIONS.md  TELEGRAM_FINAL_SOLUTION.md  TELEGRAM_FINAL_TEST.md  TELEGRAM_FINAL_WORKING.md  TELEGRAM_FIXED_GUIDE.md  TELEGRAM_INTEGRATION_COMPLETE.md  TELEGRAM_QR_AUTH_FINAL.md  TELEGRAM_QR_AUTH_FIXED.md  TELEGRAM_QR_AUTH_GUIDE.md  TELEGRAM_QUICK_START.md  TELEGRAM_READY_TO_USE.md  TELEGRAM_REAL_API_GUIDE.md  TELEGRAM_REAL_MODE_CHECK.md  (+65 more)
backend/apps/: urls.py
backend/config/: __init__.py  api_urls.py  asgi.py  celery.py  middleware.py  settings.py  settings_production.py  urls.py
(+799 files in other folders)
